Fix zoomed in background images on mobile devices.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,6 @@ html, body {
   width: 100%;
   position: relative;
   text-align: center;
-  font-size: 2rem;
   overflow: auto;
 }
 
@@ -101,26 +100,37 @@ p {
 header {
   display: flex;
   justify-content: space-between;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index:101;
   width: 100%;
 }
 
 
 /************* Main *************/
-  #main-div {
-    justify-content: center;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-image: url("https://raw.githubusercontent.com/enamarat/enamarat.github.io/master/public/rsz_img_0194.jpg");
-  }
+#main-div:before {
+  content: "";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url("https://raw.githubusercontent.com/enamarat/enamarat.github.io/master/public/rsz_img_0194.jpg") no-repeat center top;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#main-div div {
+  position: absolute;
+  top: 30%;
+}
 
   /********** Portfolio *****/
-  #portfolio-div:before {
+#portfolio-div:before {
   content: "";
   display: flex;
   position: fixed;
@@ -129,107 +139,112 @@ header {
   width: 100%;
   height: 100%;
   z-index: -10;
-  background: url("https://raw.githubusercontent.com/enamarat/enamarat.github.io/master/public/rsz_img_0195.jpg") no-repeat center center;
+  background: url("https://raw.githubusercontent.com/enamarat/enamarat.github.io/master/public/rsz_img_0195.jpg") no-repeat center top;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
 
+.gallery {
+  align-items: center;
+  width: 100%;
+  padding-top: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 
-  .gallery {
-    align-items: center;
-    width: 100%;
-    padding-top: 2rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
+.collection {
+  width: 100%;
+  align-items: center;
+}
 
-  .collection {
-    width: 100%;
-    align-items: center;
-  }
+.gallery h1 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  color: #000;
+}
 
-  .gallery h1 {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    color: #000;
-  }
+.portfolio-item  {
+  width: 60%;
+  opacity: 0.7;
+  margin-top: 1rem;
+}
 
-  .portfolio-item  {
-    width: 60%;
-    opacity: 0.7;
-    margin-top: 1rem;
-  }
+.image {
+  width: 100%;
+  overflow: hidden;
+}
 
-  .image {
-    width: 100%;
-    overflow: hidden;
-  }
+.portfolio-item .image img {
+  width: 100%;
+}
 
-  .portfolio-item .image img {
-    width: 100%;
-  }
+.portfolio-item:last-child {
+  margin-bottom: 2rem;
+}
 
-  .portfolio-item:last-child {
-    margin-bottom: 2rem;
-  }
+.opposite-side {
+  display: none;
+}
 
-  .opposite-side {
-    display: none;
-  }
-
-  .portfolio-item:hover {
-    transform: scale(1.08);
-  }
+.portfolio-item:hover {
+  transform: scale(1.08);
+}
 
 
   /************* About me ********/
-  #about-div {
-    display: none;
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    background-size: cover;
-    background-attachment: fixed;
-    background-image: url("https://raw.githubusercontent.com/enamarat/enamarat.github.io/master/public/rsz_img_0190.jpg");
-  }
+#about-div:before {
+  content: "";
+  display: flex;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url("https://raw.githubusercontent.com/enamarat/enamarat.github.io/master/public/rsz_img_0190.jpg") no-repeat center top;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
-  .bio {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 4rem;
-  }
+.bio {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2rem;
+}
 
-  .inner-bio {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+.inner-bio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  .text {
-    width: 90%;
-    background-color: rgba(26, 139, 237, 0.5);
-  }
+.text {
+  width: 90%;
+  background-color: rgba(26, 139, 237, 0.7);
+}
 
-  .photo {
-    width: 60%;
-    margin-top: 1rem;
-    margin-bottom: 0.5rem;
-  }
+.photo {
+  width: 60%;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
 
-  #photo {
-    max-width: 90%;
-    margin-right: 10px;
-    margin-left: 20px;
-    border: 5px solid #FFF;
-  }
+#photo {
+  max-width: 90%;
+  margin-right: 10px;
+  margin-left: 20px;
+  border: 5px solid #FFF;
+}
 
-  #twitter:hover {
-    transform: rotate(36deg);
-  }
+#twitter:hover {
+  transform: rotate(36deg);
+}
 
 
 /****** Media queries *******/
@@ -244,12 +259,12 @@ header {
 @media screen and (max-width: 768px) {
   /*** Typography ***/
   html, body {
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
 
   /*** Header ***/
   header label {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     padding-left: 1rem;
     color: #000;
   }
@@ -313,11 +328,11 @@ header {
 @media screen and (min-width: 1150px) {
   /*** About me ***/
   .photo {
-    width: 40%;
+    width: 35%;
   }
 
   .text {
-    width: 60%;
+    width: 65%;
   }
 
 }
